Fix cards overlapping when they wrap on mobile

--- a/Corpobello/styles/Global.css
+++ b/Corpobello/styles/Global.css
@@ -54,11 +54,14 @@ body::-webkit-scrollbar-thumb {
   justify-content: flex-end;
   padding: 0 16px;
   top: 0;
-  background: rgba(123, 122, 121, 0.8);
+  background: rgba(123, 122, 121, 0.94);
   height: 13vh;
   left: 0;
   right: 0;
   z-index: 9999999;
+}
+.mobile-menu::after{
+  background: rgba(123, 122, 121, 1);
 }
 .mobile-menu__btn {
   position: relative;
@@ -194,17 +197,16 @@ header > .bigHeader{
     align-items: center;
     align-content: center;
     font-size: 4vh; 
-
   }
-.mobile-menu {
-  display: flex;
-  justify-content: space-around;
-  padding: 0px 25px
-}
-.mobile-menu__item {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
+  .mobile-menu {
+    display: flex;
+    justify-content: space-around;
+    padding: 0px 25px;
+  }
+  .mobile-menu__item {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+  }
 }
 
